--- a/index.html
+++ b/index.html
@@ -124,7 +124,7 @@
   <section id="portfolio" class="container section">
     <div class="row">
       <div class="col-md-12">
-        <h2 id="portfolio_header" class="section__title">My projects_</h2>
+        <h2 id="portfolio_header" class="section__title">Our projects_</h2>
       </div>
     </div>
     <div class="row portfolio-menu">
